--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "tslint": "^5.20.1"
   }
 }
